testing fix on mobile

--- a/src/components/App/style.scss
+++ b/src/components/App/style.scss
@@ -26,3 +26,10 @@
         }
     }
 }
+
+.app {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+}
