--- a/src/components/Drawer/style.scss
+++ b/src/components/Drawer/style.scss
@@ -8,7 +8,7 @@
     height: calc(62vh - 3.2rem);
     position: fixed;
     width: 100%;
-    top: calc(100vh - 2.9rem);
+    top: calc(100vh - 2.9rem - 200px);
     padding: 0;
     transition: transform 0.5s;
     box-shadow: 0px 0px 3px black;
@@ -41,8 +41,8 @@
         &-image {
             position: absolute;
             right: 47vw;
-            top: -9.5px;
-            width: 20px;
+            top: -13px;
+            width: 25px;
             transition-duration: 0.5s;
             z-index: 1;
 
